--- a/frontend/style.css
+++ b/frontend/style.css
@@ -37,89 +37,73 @@ select {
 /* Option 1 start */
 
 div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    margin: auto;
 }
 
 #cube1 {
+    position: fixed;
+    right: 0;
+    bottom: 0;
     background-color: rgb(0, 38, 255);
     width: 400px;
     height: 400px;
-    margin-top: -200px;
-    margin-left: -200px;
 }
 
 #cube2 {
     background-color: rgb(28, 62, 255);
     width: 380px;
     height: 380px;
-    margin-top: -190px;
-    margin-left: -190px;
 }
 
 #cube3 {
     background-color: rgb(47, 79, 255);
     width: 360px;
     height: 360px;
-    margin-top: -180px;
-    margin-left: -180px;
 }
 
 #cube4 {
     background-color: rgb(71, 98, 255);
     width: 340px;
     height: 340px;
-    margin-top: -170px;
-    margin-left: -170px;
 }
 
 #cube5 {
     background-color: rgb(100, 123, 255);
     width: 320px;
     height: 320px;
-    margin-top: -160px;
-    margin-left: -160px;
 }
 
 #cube6 {
     background-color: rgb(130, 149, 255);
     width: 300px;
     height: 300px;
-    margin-top: -150px;
-    margin-left: -150px;
 }
 
 #cube7 {
     background-color: rgb(158, 172, 255);
     width: 280px;
     height: 280px;
-    margin-top: -140px;
-    margin-left: -140px;
 }
 
 #cube8 {
     background-color: rgb(176, 188, 255);
     width: 260px;
     height: 260px;
-    margin-top: -130px;
-    margin-left: -130px;
 }
 
 #cube9 {
+    position: fixed;
+    left: 0;
+    top: 0;
     background-color: rgb(200, 209, 255);
     width: 240px;
     height: 240px;
-    margin-top: -120px;
-    margin-left: -120px;
 }
 
 #cube10 {
     background-color: rgb(231, 234, 255);
     width: 220px;
     height: 220px;
-    margin-top: -110px;
-    margin-left: -110px;
 }
 
 /* Option 1 end */
