--- a/frontend/style.css
+++ b/frontend/style.css
@@ -41,9 +41,9 @@ div {
 }
 
 #cube1 {
-    position: fixed;
-    right: 0;
-    bottom: 0;
+    position: absolute;
+    top: 10px;
+    left: 10px;
     background-color: rgb(0, 38, 255);
     width: 400px;
     height: 400px;
@@ -92,9 +92,6 @@ div {
 }
 
 #cube9 {
-    position: fixed;
-    left: 0;
-    top: 0;
     background-color: rgb(200, 209, 255);
     width: 240px;
     height: 240px;
@@ -104,6 +101,22 @@ div {
     background-color: rgb(231, 234, 255);
     width: 220px;
     height: 220px;
+}
+
+section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    border-bottom: 1px solid black;
+}
+
+section button {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    width: 200px;
+    height: 60px;
+    background-color: rgb(200, 130, 38);
 }
 
 /* Option 1 end */
