--- a/frontend/style.css
+++ b/frontend/style.css
@@ -38,172 +38,13 @@ ol, ul, li {
 
 /* CSS reset end */
 
-html {
-    scroll-behavior: smooth;
-  }
-
-body {
-    font-family: 'Dongle', sans-serif;
-}
-
-header {
-    position: fixed;
-    left: 0;
-    top: 0;
+#root {
     width: 100%;
-    height: 50px;
-    text-align: center;
-    z-index: 99;
-    background-color: #596869;
-}
-
-header a {
-    padding: 10px 40px;
-    font-size: 30px;
-}
-
-section {
     min-height: 100vh;
-} 
-
-/* Welcome section start */
-
-#welcome {
-    height: 100vh;
-    overflow: hidden;
 }
 
-#welcome img {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    width: 100%;
-    object-fit: cover;
-    z-index: -1;
+#root button {
+    padding: 20px;
+    margin: 20px;
+    background-color: rgb(49, 88, 75);
 }
-
-#welcome button {
-    position: absolute;
-    width: 200px;
-    height: 60px;
-    bottom: 0; 
-    left: 50%;
-    margin: 40px 0;
-    border: 2px solid #FFF;
-    border-radius: 50px;
-    transform: translateX(-50%);
-    background-color: #596869;
-    font-size: 20px;
-    color: #FFF;
-}
-
-#welcome h1 {
-    margin: 40px;
-    color: #FFF;
-    font-family: 'Dancing Script', cursive;
-    font-size: 100px;
-}
-
-/* Welcome section end */
-
-/* About section start */
-
-#about {
-    min-height: unset;
-    background-color: #c4c8c8;
-}
-
-#about article{
-    width: 100%;
-    max-width: 400px;
-    padding: 80px 20px;
-    margin: auto;
-}
-
-#about h2 {
-    padding-bottom: 20px;
-}
-
-/* About section end */
-
-/* Services section start */
-
-#services {
-    display: flex;
-    padding: 0px;
-    background-image: url(https://cutewallpaper.org/21/black-smokey-background/Dark-Smoky-Background-Best-Background-Images-HD-Wallpaper.png);
-    background-size: cover;
-    background-position: center;
-    margin: 0;
-}
-
-#services ul {
-    width: 100%;
-    max-width: 800px;
-    padding: 80px 20px;
-    margin: auto;
-    background-color: rgba(95, 95, 95, 0.5);
-    color: #FFF;
-}
-
-#services ul li {
-    padding-bottom: 20px;
-}
-
-#services ul li h2 {
-    letter-spacing: 0.1em;
-}
-
-#services ul li h2, #services ul li p {
-    text-align: center;
-}
-
-/* Services section start */
-
-
-/* Contact section start */
-
-#contact {
-    background-color: #c4c8c8;
-}
-
-#contact form {
-    width: 100%;
-    max-width: 300px;
-    padding: 40px 20px;
-    margin: 0 auto;
-    text-align: center;
-    border: 3px solid #596869;
-}
-
-#contact input, #contact label {
-    display: block;
-    width: 100%;
-}
-
-#contact label {
-    font-size: 22px;
-    padding-bottom: 10px;
-}
-
-#contact input {
-    height: 60px;
-    padding: 0 10px;
-    margin-bottom: 20px;
-    font-size: 18px;
-    background-color: #FFF;
-}
-
-#contact button {
-    width: 150px;
-    height: 40px;
-    border-radius: 50px;
-    background-color: #596869;
-    font-size: 22px;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
-}
-
-/* Contact section end */
